[metadata]
name = arena
version = 2020.1.10.0
description = Multi-user and database example.
url = https://github.com/rhythm-collective/arena
author = Zageron
author_email = hello@zageron.com

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pynng>=0.5.0
    pymongo>=3.10.1
    python-dotenv>=0.12
    dnspython>=1.16.0
    rope>=0.16.0
    discord.py>=1.3.2
    tinydb>=3.15.2
    requests>=2.23.0
    PySimpleGUI>=4.16.0
    emoji>=0.5.4
    regex>=2020.2.20

[options.packages.find]
include =
    arena
    arena.*

[options.entry_points]
console_scripts =
    arena_mongo = arena.arena:mongo
    arena_nng = arena.arena:nng
    arena_reg = arena.arena:registration
    arena_disc = arena.arena:discord
